2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/ATIP.cs:
	  Added disc type and manufacturer lookup from ATIP.

	* CD/PMA.cs:
	  Implement full PMA decoding.

	* CD/FullTOC.cs:
	  Implement decoding disc ID.

	* SCSI/MMC/DiscInformation.cs:
	  Disc ID is 24-bit.

	* CD/CDTextOnLeadIn.cs:
	  CD-TEXT can be empty without being null, do not decode an
	  empty one.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/CDTextOnLeadIn.cs:
	  Finally CD-Text on lead-in is getting decoded correctly...

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* CD/FullTOC.cs:
	  Enhanced prettify to be more verbose.

	* CD/TOC.cs:
	  Corrected typo.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* CD/TOC.cs:
	* CD/FullTOC.cs:
	  Added support for CD-V.
	Added support for CD-DA.

	* CD/Enums.cs:
	  Added support for CD-V.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs:
	  Added support for Nintendo GOD and WOD.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* Xbox/DMI.cs:
	* DiscImageChef.Decoders.csproj:
	  Added decoding of XGD2 and XGD3 DMI.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/PFI.cs:
	* DVD/Enums.cs:
	* DVD/CSS&CPRM.cs:
	  Use global enums for DVD structure decoding.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/Spare.cs:
	  Implemented decoding DVD-RAM Spare Area Information.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/Cartridge.cs:
	  Implemented decoding DVD-RAM medium status.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* DVD/DDS.cs:
	  Added DDS decoding.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* DVD/CSS&CPRM.cs:
	  Must return value.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* DVD/CSS&CPRM.cs:
	  Added decoding Lead-In CMI for DVD.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Blu-ray/DI.cs:
	* Blu-ray/BD.cs:
	* Blu-ray/BCA.cs:
	* Blu-ray/DDS.cs:
	* Blu-ray/Spare.cs:
	* Blu-ray/Cartridge.cs: