@@ -1,5 +1,14 @@
 2015-12-04  Natalia Portillo  <claunia@claunia.com>
 
+	* DVD/PFI.cs:
+	* DVD/Enums.cs:
+	  Added HD DVD types.
+
+	* SCSI/Sense.cs:
+	  Solved SCSI sense decoding.
+
+2015-12-04  Natalia Portillo  <claunia@claunia.com>
+
 	* CD/ATIP.cs:
 	  Added disc type and manufacturer lookup from ATIP.
 
